--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,10 @@
-apparmor==3.0.1
-appdirs==1.4.4
-Brlapi==0.8.2
-btrfsutil==5.11
-CacheControl==0.12.6
-certifi==2020.6.20
-cffi==1.14.5
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-colorama==0.4.4
-contextlib2==0.6.0.post1
-cryptography==3.4.6
-distlib==0.3.1
-distro==1.5.0
-filelock==3.0.12
-html5lib==1.1
-idna==2.10
-lensfun==0.3.95
-LibAppArmor==3.0.1
-louis==3.17.0
-msgpack==1.0.2
-ordered-set==4.0.2
-packaging==20.9
-pep517==0.9.1
-pipenv==2020.11.15
-ply==3.11
-progress==1.5
-pwquality==1.4.4
-pycparser==2.20
-PyGObject==3.38.0
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-python-libtorrent==1.2.11
-pyxdg==0.26
-requests==2.25.1
-resolvelib==0.5.4
-retrying==1.3.3
-six==1.15.0
-team==1.0
-toml==0.10.2
-urllib3==1.26.3
-virtualenv==20.4.2
-virtualenv-clone==0.5.4
-webencodings==0.5.1
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==20.3.0
+chardet==4.0.0
+discord.py==1.6.0
+idna==3.1
+multidict==5.1.0
+python-dotenv==0.16.0
+typing-extensions==3.7.4.3
+yarl==1.6.3
